Filter out the deployment PRs.